--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -100,14 +100,14 @@ ul li:hover a {
 	padding-right: 20px;
 	color: #A3A3A3;
 }
-.about {
+/*.about {
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-top: 35px;
 	display: inline-block;
 	background-color: #FFFFFF;
 	margin-top: 0px;
-}
+}*/
 /* Stats Gallery */
 .stats {
 	color: #717070;
