--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Body */
-body {
+/*body {
 	font-family: source-sans-pro;
 	background-color: #f2f2f2;
 	margin-top: 0px;
@@ -9,7 +9,7 @@ body {
 	margin-left: 0px;
 	font-style: normal;
 	font-weight: 200;
-}
+}*/
 /* Container */
 .container {
 	width: 90%;
@@ -19,12 +19,12 @@ body {
 	background-color: #FFFFFF;
 }
 /* Navigation */
-header {
+/*header {
 	width: 100%;
 	height: 5%;
 	background-color: #52bad5;
 	border-bottom: 1px solid #2C9AB7;
-}
+}*/
 .logo {
 	color: #fff;
 	font-weight: bold;
