--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
 @charset "utf-8";
 /* CSS Document */
+header {
+	width: 100%;
+	height: 5%;
+	background-color: #52bad5;
+	border-bottom: 1px solid #2C9AB7;
+	position:sticky;
+}
+
+body {
+    font-family: "Fieldwork 01 Geo Hair", "Fieldwork 06 Geo Bold";
+	background-color: #f2f2f2;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	font-style: normal;
+	font-weight: 200;
+}
+
 .hero {
- background-image: url("/images/Main_BG.png");
+ background-image: url("images/Main_BG.png");
  background-color: #cccccc;
  position: relative;
  width: 100%;
@@ -13,7 +32,7 @@
 }
 
 .reel {
- background-image: url("/images/Reel_BG.png");
+ background-image: url("images/Reel_BG.png");
  background-color: #cccccc;
  position: relative;
  width: 100%;
@@ -25,7 +44,7 @@
 }
 
 .projects {
- background-image: url("/images/Projects_BG.png");
+ background-image: url("images/Projects_BG.png");
  background-color: #cccccc;
  position: relative;
  width: 100%;
@@ -37,7 +56,7 @@
 }
 
 .about {
- background-image: url("/images/About_BG.png");
+ background-image: url("images/About_BG.png");
  background-color: #cccccc;
  position: relative;
  width: 100%;
