--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @charset "utf-8";
 /* CSS Document */
 header {
-	width: 100%;
-	height: 5%;
-	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
-	position:sticky;
+    width: 100%;
+    height: 5%;
+    background-color: #52bad5;
+    border-bottom: 1px solid #2C9AB7;
+    position: static;
 }
 
 body {
-    font-family: "Fieldwork 01 Geo Hair", "Fieldwork 06 Geo Bold";
-	background-color: #f2f2f2;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	font-style: normal;
-	font-weight: 200;
+    font-family: 'fieldwork', sans-serif;
+    background-color: #f2f2f2;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    /* [disabled]font-style: normal; */
+    /* [disabled]font-weight: 200; */
 }
 
 .hero {
@@ -65,4 +65,29 @@ body {
  background-position: center center;
  background-size: cover;
  opacity: 1;
+}
+
+.hero_header {
+	font-size: 100px;
+	color: #FFFFFF;
+	text-align: center;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+/*	letter-spacing: 4px;*/
+}
+
+.light {
+	font-weight: 100;
+}
+
+.tagline {
+	font-size:20px;
+	text-align: center;
+	color: #FFFFFF;
+	margin-top: 4px;
+	font-weight: lighter;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
 }
