--- a/css/full-page-scroll.css
+++ b/css/full-page-scroll.css
@@ -15,8 +15,9 @@ body, html {
 }
 
 .scroll-container section {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .dots {	
