Galaxy's Edge Artwork And Page Changes
-Added Galaxy's Edge background artwork
-Added an image to be used on the Galaxy's Edge project page
-Started adjusting layout of Galaxy's Edge project page
-Used Galaxy's Edge background for thumbnail on main page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2993,6 +2993,11 @@ input, select, textarea {
     position: relative;
 	}
 
+	.spotlight.project	{
+	height: 66vh;
+	background-position: 50% 150%;
+	}
+
 		.spotlight:nth-last-of-type(1) {
 			z-index: 1;
 		}
