--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -779,7 +779,7 @@ input, select, textarea {
 		}
 
 		.row > .col-7 {
-			width: 58.33333%;
+    width: 58.3333%;
 		}
 
 		.row > .off-7 {
@@ -2524,7 +2524,7 @@ input, select, textarea {
 	}
 
 		.image:before {
-			content: '';
+			/*content: '';
 			display: block;
 			position: absolute;
 			left: 0;
@@ -2532,7 +2532,7 @@ input, select, textarea {
 			background-image: url("images/overlay.png");
 			width: 100%;
 			height: 100%;
-			z-index: 1;
+			z-index: 1;*/
 		}
 
 		.image img {
@@ -2546,6 +2546,7 @@ input, select, textarea {
 		.image.left video, .image.right video {
 				width: 100%;
 		}
+
 		.image.left {
 			float: left;
 			margin: 0 1.5em 1em 0;
