Replaced YouTube Videos With Vimeo
-Changed videos from YouTube hosted ones to Vimeo hosted ones
-Adjusted embed settings to account for differences between YouTube and Vimeo embeds
-Added Gif-like Vimeo embeds

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2587,6 +2587,10 @@ input, select, textarea {
     -o-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 			}
+	iframe {
+		width:16em;
+		height:9em;
+	}
 
 /* List */
 
