--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1686,6 +1686,18 @@ h2   {
 
 		@media screen and (max-width: 736px) {
 
+			.image.left, .image.right {
+    /* [disabled]display: block; */
+    max-width: 100% !important;
+				width: 100% !important;
+
+			}
+			
+			iframe {
+    			width: 100% !important;
+				height: 19em !important;
+			}
+			
 			.row {
 				display: flex;
 				flex-wrap: wrap;
@@ -2581,7 +2593,7 @@ h2   {
 		}
 
 		.image.left, .image.right {
-			max-width: 40%;
+    max-width: 30%;
 		}
 
 			.image.left img, .image.right img {
@@ -2610,8 +2622,8 @@ h2   {
     line-height: 100%;
 			}
 	iframe {
-		width:20em;
-		height:11.25em;
+    width: 100%;
+    height: 11.25em;
 	}
 
 /* List */
@@ -3031,8 +3043,8 @@ h2   {
 	}
 
 	.spotlight.project	{
-	height: 66vh;
-	background-position: 50% 150%;
+    height: 66vh;
+    background-position: 50% 150%;
 	}
 
 		.spotlight:nth-last-of-type(1) {
@@ -3730,30 +3742,39 @@ h2   {
 
 		/* Spotlight */
 
+		.image.main img{
+    height: 100%;
+    width: auto;
+		}
+		
 			.spotlight {
-				background-attachment: scroll;
-				height: auto;
+    background-attachment: scroll;
+    /* [disabled]height: auto; */
 			}
 
 				.spotlight .image.main {
-					display: block;
-					margin: 0;
-					max-height: 40vh;
-					overflow: hidden;
+    display: block;
+    margin: 0;
+    max-height: 100%;
+    overflow: hidden;
 				}
 
 				.spotlight .content {
-					background-color: #1c1d26;
-					border-width: 0 !important;
-					border-top-width: 0.35em !important;
-					bottom: auto !important;
-					left: auto !important;
-					padding: 4.5em 2.5em 2.5em 2.5em !important;
-					position: relative;
-					right: auto !important;
-					text-align: center;
-					top: auto !important;
-					width: 100% !important;
+    /* [disabled]background-color: #1c1d26; */
+    -moz-transform: translate(0,-100%);
+    -webkit-transform: translate(0,-100%);
+    -ms-transform: translate(0,-100%);
+    transform: translate(0,-100%);
+    border-width: 0 !important;
+    border-top-width: 0.35em !important;
+    bottom: auto !important;
+    left: auto !important;
+    padding: 4.5em 2.5em 2.5em 2.5em !important;
+    position: relative;
+    right: auto !important;
+    text-align: center;
+    top: auto !important;
+    width: 100% !important;
 				}
 
 					.spotlight .content ul.actions {
@@ -3773,6 +3794,11 @@ h2   {
 					display: none;
 				}
 
+		.spotlight.project	{
+    height: 66vh;
+    /* [disabled]background-position: 50% 150%; */
+	}
+		
 		/* Wrapper */
 
 			.wrapper {
@@ -3881,7 +3907,7 @@ h2   {
 			}
 
 				.spotlight .image.main {
-					max-height: 60vh;
+    max-height: 100%;
 				}
 
 				.spotlight .content {
@@ -4141,7 +4167,7 @@ h2   {
 		/* Spotlight */
 
 			.spotlight .image.main {
-				max-height: 50vh;
+    max-height: 100%;
 			}
 
 			.spotlight .content {
