--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -705,7 +705,8 @@ input, select, textarea {
 		@media screen and (max-width: 980px) {
 
 			.container {
-				width: 100% !important;
+	width: 100% !important;
+	justify-content: center;
 			}
 h2   {
     text-align: left;
@@ -828,11 +829,20 @@ h2   {
 	align-items: center;
 		}
 .row > .reel {
-	width: 100%;
+	width: 100vw;
 	height: auto;
 	padding-left: 2.5em;
-	align-content: left;
+	align-content: center;
 		}
+.row .reel iframe {
+	width: 100vw;
+	height: 100vh;
+	padding-left: 20vw;
+	padding-right: 35vw;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
+}
+
 
 		.row > .off-7 {
 			margin-left: 58.33333%;
@@ -1729,8 +1739,8 @@ h2   {
 			}
 			
 			iframe {
-    			width: 100% !important;
-				height: 19em !important;
+	width: 100vw !important;
+	/* [disabled]height: 19em !important; */
 			}
 			
 			.row {
@@ -2218,6 +2228,27 @@ h2   {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 5em;
 						}
+.row .reel iframe {
+	width: 100vw;
+	height: 100vh;
+	padding-top: 2vw;
+	padding-right: 2vw;
+	padding-left: 2vw;
+	padding-bottom: 2vw;
+}
+.row > .reel {
+	width: 100%;
+	height: auto;
+	padding-left: 2.5em;
+	align-content: left;
+		}
+.image.fit p {
+	/* [disabled]font-size: 1em; */
+
+			}
+
+
+
 
 		}
 
@@ -2656,7 +2687,7 @@ h2   {
 	-o-transform: translate(-50%,-50%);
 	transform: translate(-50%,-50%);
 	line-height: 100%;
-	font-size: 150%;
+	font-size: 2vw;
 			}
 	iframe {
 	/* [disabled]width: 100%; */
@@ -3797,21 +3828,21 @@ h2   {
 				}
 
 				.spotlight .content {
-    /* [disabled]background-color: #1c1d26; */
-    -moz-transform: translate(0,-100%);
-    -webkit-transform: translate(0,-100%);
-    -ms-transform: translate(0,-100%);
-    transform: translate(0,-100%);
-    border-width: 0 !important;
-    border-top-width: 0.35em !important;
-    bottom: auto !important;
-    left: auto !important;
-    padding: 4.5em 2.5em 2.5em 2.5em !important;
-    position: relative;
-    right: auto !important;
-    text-align: center;
-    top: auto !important;
-    width: 100% !important;
+	/* [disabled]background-color: #1c1d26; */
+	-moz-transform: translate(0,-100%);
+	-webkit-transform: translate(0,-100%);
+	-ms-transform: translate(0,-100%);
+	transform: translate(0,-100%);
+	border-width: 0 !important;
+	border-top-width: 0.35em !important;
+	bottom: auto !important;
+	left: auto !important;
+	padding: 4.5em 2.5em 2.5em 2.5em !important;
+	position: relative;
+	right: auto !important;
+	text-align: center;
+	top: auto !important;
+	width: 100% !important;
 				}
 
 					.spotlight .content ul.actions {
@@ -3948,8 +3979,15 @@ h2   {
 				}
 
 				.spotlight .content {
-					border-top-width: 0.2em !important;
-					padding: 3.25em 1.5em 1.25em 1.5em !important;
+	border-top-width: 0.2em !important;
+	/* [disabled]padding: 3.25em 1.5em 1.25em 1.5em !important; */
+	/* [disabled]position: absolute; */
+	/* [disabled]transform: none; */
+	/* [disabled]-webkit-transform: none; */
+	/* [disabled]-moz-transform: none; */
+	/* [disabled]-ms-transform: none; */
+	/* [disabled]height: 100%; */
+	justify-content: center;
 				}
 
 		/* Wrapper */
@@ -4208,11 +4246,12 @@ h2   {
 			}
 
 			.spotlight .content {
-				padding: 3em 1.25em 1em 1.25em !important;
+	padding: 3em 1.25em 1em 1.25em !important;
+	/* [disabled]max-height: 100%; */
 			}
 
 			#one .content, #two .content {
-    			transform: translate(0,-150%);
+	/* [disabled]transform: translate(0,-150%); */
 			}
 		
 		/* Wrapper */
